myteo/test/analyze/type_check/recursive_aliases_error/tuple.exp
Error: Cycle detected in definition of type "Tup1"
test/analyze/type_check/recursive_aliases_error/tuple.myte:3:0-16
 3 | type Tup1 (Tup1)
   | ^^^^^^^^^^^^^^^^

Error: Cycle detected in definition of type "Tup2"
test/analyze/type_check/recursive_aliases_error/tuple.myte:4:0-29
 4 | type Tup2 (int, Tup2, string)
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

Error: Cycle detected in definition of type "Tup4"
test/analyze/type_check/recursive_aliases_error/tuple.myte:7:0-27
 7 | type Tup4 (bool, Tup3, int)
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^